SONAR-12611 Fix badges alignment on QG page

--- a/server/sonar-web/src/main/js/app/styles/components/badges.css
+++ b/server/sonar-web/src/main/js/app/styles/components/badges.css
@@ -42,12 +42,10 @@ a.badge {
   border-bottom: none;
 }
 
-.list-group-item > .badge,
 .list-group-item-heading > .badge {
   float: right;
   margin: 3px;
 }
-.list-group-item > .badge + .badge,
 .list-group-item-heading > .badge + .badge {
   margin-right: 5px;
 }
